[package]
name = "fossrust-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
extism = "1.12"
floem = "0.2" 
just-kdl = "0.1"
kdl = "6.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "gzip", "brotli", "zstd", "cookies", "rustls-tls-native-roots", "blocking"] }
rhai = "1.23.4"
tokio = { version = "1.47", features = ["full"] }
wasmtime = { version = "37.0", features = ["component-model"] }
